🦄 refactor: refactor article
